--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="logo.png" alt="">
+                <img src="z-images/logo.png" alt="">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -33,7 +33,6 @@
         </div>
         <div class="about-card">
         <div class="about-content">
-            <h2>Howdy, I'm Graci Edinger</h2>
             <p>
                 I've always had a creative side to me, but have always been a bit of a computer nerd. So I found the best of the both worlds!
             </p>
@@ -44,8 +43,22 @@
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Graci Edinger Portfolio</p>
+    <footer class="footer">
+        <div class="footer-left">
+            <img src="z-images/logo.png" alt="Logo">
+            <div class="copyright">&copy; 2023 Graci Edinger</div>
+        </div>
+        <div class="footer-right">
+            <nav class="footer-links">
+                <ul>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="photo.html">Photo's</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 
 </body>
