--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
         <div class="logo">
-            <img src="logo.png" alt="">
+          <img src="z-images/logo.png" alt="">
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
@@ -46,8 +46,22 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2023 Graci Edinger Portfolio</p>
-  </footer>
+  <footer class="footer">
+    <div class="footer-left">
+        <img src="z-images/logo.png" alt="Logo">
+        <div class="copyright">&copy; 2023 Graci Edinger</div>
+    </div>
+    <div class="footer-right">
+        <nav class="footer-links">
+            <ul>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="photo.html">Photo's</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</footer>
 </body>
 </html>
