--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="logo.png" alt="">
+                <img src="z-images/logo.png" alt="">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
             <a href="z-portfolio/project2.html">
                 <img src="z-images/project2.jpg" alt="">
                 <h2>Photo Bashing</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Merging & blending images together to combine a finalized image.</p>
             </a>
         </div>
 
@@ -49,7 +49,7 @@
             <a href="z-portfolio/project3.html">
                 <img src="z-images/project3.png" alt="">
                 <h2>Character Concept</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Just as how the title sounds, creating a character.</p>
             </a>
             
         </div>
@@ -57,7 +57,7 @@
             <a href="z-portfolio/project4.html">
                 <img src="z-images/project4.png" alt="">
                 <h2>Style Guide</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Creating a style guide for a Italian Resturant</p>
             </a>
         </div>
 
@@ -65,38 +65,38 @@
             <a href="z-portfolio/project5.html">
                 <img src="z-images/project5.png" alt="">
                 <h2>National Park Poster</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Creating a poster for the Kruger National Park.</p>
             </a>
         </div>
 
         <div class="portfolio-item">
             <a href="z-portfolio/project6.html">
                 <img src="z-images/project6.png" alt="">
-                <h2>project</h2>
+                <h2>Personal Project</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </a>
         </div>
 
         <div class="portfolio-item">
             <a href="z-portfolio/project7.html">
-                <img src="z-images/project7.png" alt="">
-                <h2>project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <img src="z-images/project7.jpg" alt="">
+                <h2>Proudct Photography and Editing</h2>
+                <p>Mountain Dew... just dew it.</p>
             </a>
         </div>
 
                 <div class="portfolio-item">
             <a href="z-portfolio/project8.html">
                 <img src="z-images/project8.png" alt="">
-                <h2>project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h2>Logo Design</h2>
+                <p>Logo design for the Italian Resturant.</p>
             </a>
         </div>
 
         <div class="portfolio-item">
             <a href="z-portfolio/project9.html">
-                <img src="z-images/project9.png" alt="">
-                <h2>project</h2>
+                <img src="z-images/project9.jpg" alt="">
+                <h2>Portrait Photo Editing</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </a>
         </div>
@@ -126,8 +126,22 @@
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Graci Edinger Portfolio</p>
+    <footer class="footer">
+        <div class="footer-left">
+            <img src="z-images/logo.png" alt="Logo">
+            <div class="copyright">&copy; 2023 Graci Edinger</div>
+        </div>
+        <div class="footer-right">
+            <nav class="footer-links">
+                <ul>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="photo.html">Photo's</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
